Minor cleanup and improvements